--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">AndroidERestaurant</string>
+    <string name="home_starters">Entrées</string>
+    <string name="home_dish">Plats</string>
+    <string name="home_desert">Desserts</string>
 </resources>
